<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:title="@string/home" />

        <item
            android:id="@+id/invite_friend"
            android:title="@string/invite_friend" />


        <item
            android:id="@+id/address"
            android:title="@string/address_menu" />
        <item
            android:id="@+id/upcoming_appointments"
            android:title="@string/upcoming_appointments" />


        <item
            android:id="@+id/contact_support"
            android:title="@string/contact_support" />


        <item
            android:id="@+id/completed_appointments"
            android:title="@string/completed_appointments" />




        <item
            android:id="@+id/cancel_appointments"
            android:title="@string/cancel_appointments" />



    </group>

</menu>