<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/about_us_draw">


        <TextView
            android:id="@+id/tvCompanyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/company_info"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


        <TextView
            android:id="@+id/tvOffredServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCompanyInfo"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/offered_services"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvFAQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOffredServices"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/faq"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvTermsAndConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFAQ"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTermsAndConditions"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


        <TextView
            android:id="@+id/tvAppyToWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrivacyPolicy"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/apply_to_work_with_us"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


        <ImageView
            android:id="@+id/down_arrow"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/tvAppyToWork"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_35sdp"
            android:rotation="90"
            android:scaleType="fitXY"
            android:src="@drawable/down_arrow" />


    </RelativeLayout>

</ScrollView>