<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/logout_drawble"
    android:padding="@dimen/_10sdp">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/logouttt" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/logging_out"
            android:textColor="#fff"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />


    </LinearLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear"
        android:background="#fff" />


    <TextView
        android:id="@+id/tvReallyLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:text="@string/do_you_really_want_to_logout"
        android:textColor="#fff"
        android:textSize="@dimen/_15sdp"
        android:textStyle="normal" />


    <RelativeLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReallyLogout"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">


        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/no"
            android:textColor="#fff"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/yes"
            android:textColor="#fff"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>