<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_350sdp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        app:cardBackgroundColor="#3374de"
        app:cardCornerRadius="@dimen/_15sdp">


        <LinearLayout
            android:id="@+id/relativeSubMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvVerifivation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="#fff"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15ssp"
                android:gravity="center"
                android:text="@string/please_enter_your_new_password"
                android:textColor="#fff"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/StyledTilEditTextThemeNew">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edOldPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:hint="@string/old_password"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#FF40C0F9" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/StyledTilEditTextThemeNew">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:hint="@string/new_password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#FF40C0F9" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/StyledTilEditTextThemeNew">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:hint="@string/confirm_new_password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#FF40C0F9" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_60sdp"
                android:layout_marginRight="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/resend_btn_bg"
                android:gravity="center"
                android:padding="@dimen/_10ssp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>