<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <RelativeLayout
        android:id="@+id/relativeBackArrowImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3374de"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/backArrowImage"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:tint="@color/colorWhite"
            android:src="@drawable/back_arrow" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeBackArrowImage"
        android:layout_marginTop="@dimen/_50sdp"
        android:padding="@dimen/_10sdp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="#FF182391"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLogin"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edEmailPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_email"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp"
                    app:backgroundTint="#000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp"
                    app:backgroundTint="#000" />
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/chKeemMeLoggedIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:buttonTint="#000"
                android:text="@string/keep_me_logged_in" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeEd"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <LinearLayout
            android:id="@+id/linearLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/login_background"
                android:gravity="center"
                android:text="@string/login_btn"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@+id/linearLoginBtn"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:text="@string/forget_password_"
                android:textColor="#000"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeDontHaveAnAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/btnDontHave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/dont_have_an_account_createone_bg"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_create_one"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

</RelativeLayout>