<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF3EA9F9">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@drawable/troffee" />


        <TextView
            android:id="@+id/tvCongrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/congratulations_your_order_is_complete"
            android:textColor="#000"
            android:textSize="@dimen/_16sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/a_cleaner_will_be_sent_to"
            android:textColor="#FF182391"
            android:textSize="@dimen/_15sdp" />


        <TextView
            android:id="@+id/tvAddressReach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/address_"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageCallToCleaner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/call_cleaner" />

            <ImageView
                android:id="@+id/imageMessageToCleaner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/message" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageCallSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/call_support" />


            <ImageView
                android:id="@+id/imageEmailSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/email_support" />


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tvViewOrderDetail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/view_details_btn_bg"
        android:gravity="center"
        android:text="@string/view_order_details"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>