<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_25sdp"
    android:layout_marginRight="@dimen/_25sdp"
    android:background="@drawable/dialog_bg_er"
    android:padding="@dimen/_10sdp">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ok_img_new" />


        <TextView

            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/success"
            android:textColor="#FFF"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />


    </LinearLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear"
        android:background="#fff" />


    <TextView
        android:id="@+id/tvToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:text="@string/this_is_the_default_text"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvToast"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:visibility="visible">


        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="No"
            android:textColor="#fff"
            android:textStyle="bold"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>